Fix button font readability in notification dropdown.

--- a/MyAnimeListDeepDark.user.css
+++ b/MyAnimeListDeepDark.user.css
@@ -1917,6 +1917,11 @@
 	.page-common .header-notification-item-content .actions .action-button.deny:hover {
 		background-color: var(--main-background) !important;
 	}
+	
+	/*Fix button font readability */
+	span.result{
+		color : var(--main-text) !important;
+	}
 
 
 	/*Notification page*/
